# project-folder-manager

./: .gitignore  Cargo.toml  README.md  build.rs  findings.md  progress.md  task_plan.md
.github/workflows/: release.yml
src/: app.rs  config.rs  main.rs  models.rs  preview.rs  scanner.rs
src/ui/: file_tree.rs  mod.rs  search.rs  sidebar.rs  stats.rs
