[package]
name = "project-folder-manager"
version = "0.1.0"
edition = "2021"
description = "本地项目文件夹可视化管理系统 - 直观查看项目文件夹用途、占用空间、文件组成，支持预览"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
chrono = { version = "0.4", features = ["serde"] }
humansize = "2"
rfd = "0.14"

[profile.release]
opt-level = 2
lto = true
strip = true
